# textfsm-example

./: .gitignore  .pre-commit-config.yaml  .rubocop.yml  .tool-versions  README.md  example.conf  pyproject.toml
python/: parse.py
ruby/: address_family.rb  bgp.rb  interface.rb  parse.rb  parser.rb
